Bootstrap + Agregando Landing con NavBar

--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -1,14 +1,14 @@
-<!doctype html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Tuki Admin App</title>
-</head>
-<body>
-    <h1>Tuki Administrative App</h1>
-    <h2>T.A.A</h2>
-</body>
-</html>
+{% extends 'core/base.html' %}
+
+{% block content %}
+
+<header class="my-5 text-center">
+    <h1>Bienvenido a</h1>
+    <h1 class="fw-bold text-primary">ESCAPES DON VICENTE</h1>
+</header>
+<div class="text-center">
+    <a href="" role="button" class="btn btn-outline-primary">INICIAR SESION</a>
+    <a href="" role="button" class="btn btn-outline-success">REGISTRARSE</a>
+</div>
+
+{% endblock %}
