--- a/core/templates/core/navbar.html
+++ b/core/templates/core/navbar.html
@@ -20,7 +20,7 @@
             <li><a class="dropdown-item" href="#">Clientes</a></li>
             <li><a class="dropdown-item" href="#">Trabajos</a></li>
             <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="#">BBDD Vehiculos</a></li>
+            <li><a class="dropdown-item" href="{% url 'vehicle:all' %}">BBDD Vehiculos</a></li>
           </ul>
         </li>
         <li class="nav-item">
