--- a/vehicle/templates/vehicle/all_vehicles.html
+++ b/vehicle/templates/vehicle/all_vehicles.html
@@ -28,7 +28,7 @@
                 </tr>
             </thead>
             <tbody class="table-group-divider">
-                {% for vehicle in vehicles %}
+                {% for vehicle in page_obj %}
                 <tr>
                     <td>{{ vehicle.vehicle_brand }}</td>
                     <td>{{ vehicle.vehicle_model }}</td>
@@ -42,7 +42,7 @@
                                 <path d="M12 3c7.2 0 9 1.8 9 9s-1.8 9 -9 9s-9 -1.8 -9 -9s1.8 -9 9 -9z" />
                             </svg>
                         </a>
-                        <a href="" title="ELIMINAR" class="btn btn-outline-danger btn-sm">
+                        <a href="{% url 'vehicle:delete' vehicle.vehicle_id %}" title="ELIMINAR" class="btn btn-outline-danger btn-sm">
                             <svg  xmlns="http://www.w3.org/2000/svg"  width="24"  height="24"  viewBox="0 0 24 24"  fill="none"  stroke="currentColor"  stroke-width="2"  stroke-linecap="round"  stroke-linejoin="round"  class="icon icon-tabler icons-tabler-outline icon-tabler-trash">
                                 <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
                                 <path d="M4 7l16 0" />
@@ -56,60 +56,31 @@
                 </tr>
             </tbody>
             {% endfor %}
-<!--            <tbody class="table-group-divider">-->
-<!--                {% for vehicle in page_obj %}-->
-<!--                    <tr>-->
-<!--                        <td>{{ vehicle.marca }}</td>-->
-<!--                        <td>{{ vehicle.modelo }}</td>-->
-<!--                        <td>{{ vehicle.version }} / {{ vehicle.fabricado }}</td>-->
-<!--                        <td class="text-center">-->
-<!--                            <a href="{}" title="Ver INFO" class="btn btn-outline-warning btn-sm">-->
-<!--                                <svg  xmlns="http://www.w3.org/2000/svg"  width="24"  height="24"  viewBox="0 0 24 24"  fill="none"  stroke="currentColor"  stroke-width="2"  stroke-linecap="round"  stroke-linejoin="round"  class="icon icon-tabler icons-tabler-outline icon-tabler-info-square-rounded">-->
-<!--                                    <path stroke="none" d="M0 0h24v24H0z" fill="none"/>-->
-<!--                                    <path d="M12 9h.01" />-->
-<!--                                    <path d="M11 12h1v4h1" />-->
-<!--                                    <path d="M12 3c7.2 0 9 1.8 9 9s-1.8 9 -9 9s-9 -1.8 -9 -9s1.8 -9 9 -9z" />-->
-<!--                                </svg>-->
-<!--                            </a>-->
-<!--                            <a href="#" title="ELIMINAR" class="btn btn-outline-danger btn-sm">-->
-<!--                                <svg  xmlns="http://www.w3.org/2000/svg"  width="24"  height="24"  viewBox="0 0 24 24"  fill="none"  stroke="currentColor"  stroke-width="2"  stroke-linecap="round"  stroke-linejoin="round"  class="icon icon-tabler icons-tabler-outline icon-tabler-trash">-->
-<!--                                    <path stroke="none" d="M0 0h24v24H0z" fill="none"/>-->
-<!--                                    <path d="M4 7l16 0" />-->
-<!--                                    <path d="M10 11l0 6" />-->
-<!--                                    <path d="M14 11l0 6" />-->
-<!--                                    <path d="M5 7l1 12a2 2 0 0 0 2 2h8a2 2 0 0 0 2 -2l1 -12" />-->
-<!--                                    <path d="M9 7v-3a1 1 0 0 1 1 -1h4a1 1 0 0 1 1 1v3" />-->
-<!--                                </svg>-->
-<!--                            </a>-->
-<!--                        </td>-->
-<!--                    </tr>-->
-<!--                {% endfor %}-->
-<!--            </tbody>-->
         </table>
         <!-- Controles de paginación -->
-<!--        <nav aria-label="Page navigation">-->
-<!--            <ul class="pagination justify-content-end">-->
-<!--                {% if page_obj.has_previous %}-->
-<!--                    <li class="page-item">-->
-<!--                        <a class="page-link link-dark" href="?page=1" aria-label="Previous">-->
-<!--                            <span aria-hidden="true">&laquo;</span>-->
-<!--                        </a>-->
-<!--                    </li>-->
-<!--                {% endif %}-->
-<!--                {% for num in page_obj.paginator.page_range %}-->
-<!--                    <li class="page-item {% if num == page_obj.number %}active{% endif %}">-->
-<!--                        <a class="page-link link-dark" href="?page={{ num }}">{{ num }}</a>-->
-<!--                    </li>-->
-<!--                {% endfor %}-->
-<!--                {% if page_obj.has_next %}-->
-<!--                    <li class="page-item">-->
-<!--                        <a class="page-link link-dark" href="?page={{ page_obj.paginator.num_pages }}" aria-label="Next">-->
-<!--                            <span aria-hidden="true">&raquo;</span>-->
-<!--                        </a>-->
-<!--                    </li>-->
-<!--                {% endif %}-->
-<!--            </ul>-->
-<!--        </nav>-->
+        <nav aria-label="Page navigation">
+            <ul class="pagination justify-content-center gap-1">
+                {% if page_obj.has_previous %}
+                    <li>
+                        <a class="btn btn-outline-dark" href="?page=1" aria-label="Previous">
+                            <span aria-hidden="true">&laquo;</span>
+                        </a>
+                    </li>
+                {% endif %}
+                {% for num in page_obj.paginator.page_range %}
+                    <li>
+                        <a class="btn btn-outline-dark {% if num == page_obj.number %}active{% endif %}" href="?page={{ num }}">{{ num }}</a>
+                    </li>
+                {% endfor %}
+                {% if page_obj.has_next %}
+                    <li>
+                        <a class="btn btn-outline-dark" href="?page={{ page_obj.paginator.num_pages }}" aria-label="Next">
+                            <span aria-hidden="true">&raquo;</span>
+                        </a>
+                    </li>
+                {% endif %}
+            </ul>
+        </nav>
         <div>
             <a href="{% url 'core:index' %}" class="btn btn-outline-dark"><-</a>
         </div>
