customer app created w/model, serving static files and styles

--- a/product/templates/product/all_products.html
+++ b/product/templates/product/all_products.html
@@ -32,7 +32,7 @@
                     <td>{{ product.product_name }}</td>
                     <td>{{ product.product_supplier }}</td>
                     <td>{{ product.product_currency }} {{ product.product_price }}</td>
-                    <td class="">
+                    <td class="text-center">
                         <a href="" class="d-inline text-decoration-none text-dark">
                             <i class="bi bi-car-front-fill"></i>
                         </a>
