--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -1,11 +1,17 @@
-<!doctype html>
+{% load static %}
+
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Tuki_Admin</title>
+    <!-- Estilos de Bootstrap  -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <!--  Iconos de Bootstrap  -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <!--  Estilos extras para cada aplicacion si lo requiere  -->
+    {% block extra_css %}{% endblock %}
   </head>
   <body class="font-monospace">
     {% include 'core/navbar.html' %}
